# buckerio-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: publish-python.yml
examples/: basic_usage.py  download_file.py  presigned_urls.py  upload_file.py
src/buckerio/: __init__.py  api.py  auth.py  client.py  exceptions.py  helpers.py  models.py  xml_parser.py
tests/: conftest.py  test_auth.py  test_buckets.py  test_client.py  test_objects.py  test_presigned.py
