[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buckerio"
dynamic = ["version"]
description = "Python SDK for Buckerio - S3-compatible object storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Buckerio Team" }
]
keywords = ["s3", "storage", "buckerio", "object-storage", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/KamoliddinS/buckerio"
Documentation = "https://github.com/KamoliddinS/buckerio/tree/main/buckerio-py"
Repository = "https://github.com/KamoliddinS/buckerio"
Issues = "https://github.com/KamoliddinS/buckerio/issues"

[tool.hatch.version]
path = "src/buckerio/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/buckerio"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
